# gphoto-pull

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  gphoto-pull.toml.example  justfile  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/gphoto_pull/: __init__.py  __main__.py  automation.py  browser.py  cli.py  config.py  detail_payloads.py  download.py  enumeration.py  interrupts.py  models.py  photos_ui.py  progress.py  rpc_payloads.py  state.py  takeout.py
tests/: test_automation.py  test_browser.py  test_cli.py  test_config.py  test_detail_payloads.py  test_download.py  test_enumeration.py  test_interrupts.py  test_photos_ui.py  test_progress.py  test_rpc_payloads.py  test_state.py  test_takeout.py
