[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gphoto-pull"
version = "0.0.2"
description = "Browser-automation tooling for pulling recent media from Google Photos."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "ebrevdo" }]
keywords = ["backup", "cli", "download", "google-photos", "photos", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: System :: Archiving :: Backup",
    "Typing :: Typed",
]
dependencies = [
    "msgspec>=0.21.1",
    "platformdirs>=4.9.6",
    "playwright>=1.52",
    "python-dateutil>=2.9.0.post0",
    "rich>=15.0.0",
    "tyro>=1.0.13",
]

[project.scripts]
gphoto-pull = "gphoto_pull.cli:main"

[project.urls]
Repository = "https://github.com/ebrevdo/gphoto-pull"

[dependency-groups]
dev = [
    "pyright>=1.1.401",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["A", "ANN", "ARG", "B", "C4", "D", "E", "F", "I", "N", "RUF", "SIM", "UP"]
ignore = [
    # Keep docstrings useful without forcing boilerplate on every private helper,
    # test case, or already-documented module that uses the project's existing
    # "Description:" convention.
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D202",
    "D205",
    "D401",
    "D413",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
